# push_swap

./: .gitignore  CMakeLists.txt  Makefile  README.md  Turk_sort.c  create_stack.c  list .c  list.c  main.c  printfd.txt  push_swap  push_swap.c  push_swap.h  rules.c  scraps  stack.c  stack2.c  strategy.c
bonus/: checker.c  checker.h
headers/: push_swap.h  turk.h
include/: push_swap.h  stack.h  t_stack.h  test.h  turk.h
printflibft/: Makefile
printflibft/include/: libft.h
stack/: I_want_to_break_free.c  check_stack.c  create_stack.c  print_stack.c  push.c  reverse_rotate.c  rotate.c  search_stack.c  swap.c
test/: push_swap.c  test.c  test_move_cases.c  test_push_cases.c
turk/: Turk_sort.c  move_cases.c  push_cases.c  sort_back.c  turck_push_b.c  turk_check.c  turk_check_moves.c  turk_push_b.c  turk_search.c
